# project_cuboid

./: README.md
Lighting Conditions Data/: README
Lighting Conditions Data/2-die-dark/data/: csvSave.csv
Lighting Conditions Data/L-ambient/data/: csvSave.csv
Lighting Conditions Data/L-dark/data/: csvSave.csv
Lighting Conditions Data/screwdriver-dark/data/: csvSave.csv
Obstacle Course Data (Segmented4ease)/side_4/data/: csvSave.csv
Paper/Project_Cuboid_tex/: main.tex
ROS_ws/src/webcam/ros_cv_recorder/: CMakeLists.txt  README.md  package.xml
ROS_ws/src/webcam/ros_cv_recorder/launch/: single_recorder.launch  single_recorder_outlined.launch  single_recorder_overhead.launch  test_record.launch  trajectory_record.launch
ROS_ws/src/webcam/ros_cv_recorder/src/: recorder.py
Supplements/Data/Early State Algorithm Test Data/11_18_18_FirstobjTests/: README
Supplements/Data/Lighting Conditions Data/1-die-ambient/data/: csvSave.csv
Supplements/Data/Lighting Conditions Data/Additional Test Data/post-processing surfaces/: nut_ambient.tif  nut_dark.tif  screwdriver_ambient.tif  screwdriver_dark.tif  (+2 more)
Supplements/Data/Obstacle Course Data (Segmented4ease)/: README
Supplements/Data/Ramp Test Data/: README  beam_buckle_analysis.m
Supplements/Data/Tip Test Data/: README  face1.xlsx  face2.xlsx  face3.xlsx  face4.xlsx  tip_test.m
Supplements/Data/Tip Test Data/__MACOSX/: ._face1.xlsx  ._face2.xlsx  ._tip_test.m
Supplements/Figures media/: explode_3.tif  two_heights.tif  two_heights_sans_blurb.tif  whole_rendered.tif
src/control/master_controller/data/: README
(+71 files in other folders)
